--- a/css/style.css
+++ b/css/style.css
@@ -54,13 +54,63 @@ body {
     padding: 10px 18px;
 }
 
+.hero {
+    background: url(../img/Background.jpg) center / cover;
+    height: 700px;
+}
+
+.hero-content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero-title {
+    max-width: 470px;
+    color: #fff;
+    text-align: center;
+    font-size: 52px;
+    font-weight: 700;
+    margin: 0;
+}
+
+.hero-text {
+    color: #f7f3f2;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 300;
+    line-height: 24.5px;
+}
+
+.hero-btn {
+    width: 225px;
+    height: 40px;
+    flex-shrink: 0;
+    border-radius: 40px;
+    background: #ff4e50;
+    color: white;
+    border: none;
+}
+
+@media screen and (max-width: 510px) {
+    .hero-title {
+        text-align: center;
+        font-size: 30px;
+    }
+    .hero-text {
+        font-size: 18px;
+        text-align: center;
+    }
+}
+
 @media screen and (max-width: 450px) {
     .header-logo {
         display: none;
     }
 
     .header-content {
-        display: flex;
-        justify-content: space-around;
+        justify-content: center;
     }
 }
