--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,59 @@ body {
     border: none;
 }
 
+.Dreamshare-title {
+    color: #444;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 22px;
+    font-weight: 700;
+}
+
+.Dreamshare-steep1 {
+    position: relative;
+}
+
+.Dreamshare-steep1-text {
+    position: absolute;
+    padding: 0 20px;
+    bottom: 20px;
+}
+
+.Dreamshare-content {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.Dreamshare-btn {
+    width: 70px;
+    height: 20px;
+    flex-shrink: 0;
+    border-radius: 40px;
+    background: #ff4e50;
+    color: #fff;
+    font-size: 10px;
+    font-weight: 400;
+    border: none;
+}
+
+.Dreamshare-sabtitle {
+    color: #fff;
+    font-family: Montserrat;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 24px;
+}
+
+.Dreamshare-p {
+    color: #e3e3e3;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 16px;
+    max-width: 250px;
+}
+
 @media screen and (max-width: 510px) {
     .hero-title {
         text-align: center;
@@ -111,6 +164,14 @@ body {
     }
 
     .header-content {
+        justify-content: center;
+    }
+
+    .Dreamshare-content {
+        display: block;
+    }
+    .Dreamshare-steep1 {
+        display: flex;
         justify-content: center;
     }
 }
